fix Contrast Errors

--- a/CSS/components.css
+++ b/CSS/components.css
@@ -301,7 +301,7 @@
 }
 .news-list-content h3:hover { color: var(--color-accent); }
 
-.news-list-meta { display: flex; gap: 15px; font-size: 12px; color: var(--color-text-muted); }
+.news-list-meta { display: flex; gap: 15px; font-size: 12px; }
 .news-list-meta span { display: flex; align-items: center; }
 
 /* Category Block*/
@@ -431,7 +431,7 @@
 .account-login-text { margin-top: 20px; }
 
 .btn-pg-blue {
-    background-color: var(--color-business);
+    background-color: var(--color-accent);
     color: white;
     border: none;
     width: 100%;
@@ -454,7 +454,7 @@
 .footer-links-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px 10px; margin-bottom: 10px; }
 .footer-links-grid a { color: #333; text-decoration: none; font-size: 10px; font-weight: 550; transition: color 0.2s;}
 .footer-links-grid a:hover { text-decoration: underline; color: var(--color-accent); }
-.copyright-text { font-size: 9px; color: var(--color-text-muted); line-height: 1; padding-top: 5px; }
+.copyright-text { font-size: 9px; line-height: 1; padding-top: 5px; }
 
 /* Back to Top Button */
 .back-to-top-btn {
